Custom property keyframes created with offset when created through NLA #43541

Closed
opened 2015-02-03 01:09:35 +01:00 by Matthew Carter · 11 comments

System Information
Windows 7
ATI Radeon 5870

Blender Version
2.73
253cb97

Short description of error
Editing an action through the NLA causes newly created keyframes for Custom Properties to have an offset. The offset seems to be equal to the distance from frame 0 to the start frame of the action strip.

Exact steps for others to reproduce the error
Add custom property to object.
Create an action with the property animating.
Add the action to the NLA with its start offset from the beginning
Select the strip in the NLA and hit tab to edit
Animate the value for the Custom Property using the sliders in the Dope sheet
Add a new key for the new value
The key should appear offset from the current frame
Animate_Properties_In_NLA_Bug.blend

**System Information** Windows 7 ATI Radeon 5870 **Blender Version** 2.73 253cb97 **Short description of error** Editing an action through the NLA causes newly created keyframes for Custom Properties to have an offset. The offset seems to be equal to the distance from frame 0 to the start frame of the action strip. **Exact steps for others to reproduce the error** Add custom property to object. Create an action with the property animating. Add the action to the NLA with its start offset from the beginning Select the strip in the NLA and hit tab to edit Animate the value for the Custom Property using the sliders in the Dope sheet Add a new key for the new value The key should appear offset from the current frame [Animate_Properties_In_NLA_Bug.blend](https://archive.blender.org/developer/F140561/Animate_Properties_In_NLA_Bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MatthewCarter

Added subscriber: @MatthewCarter
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscribers: @JoshuaLeung, @Sergey

Added subscribers: @JoshuaLeung, @Sergey

@JoshuaLeung, afraid we need your feedback here since you're the one who knows NLA the best :) Mind having a glance?

@JoshuaLeung, afraid we need your feedback here since you're the one who knows NLA the best :) Mind having a glance?
Member

Ok, so reading the description closely, it sounds like this is something that only happens when inserting these keyframes using the sliders in the action editor.

Checking the code for these (anim_channels_defines.c), it looks like the sliders are just missing the necessary NLA remapping which is done for standard keyframing now. Should be a simple patch fix :)

Ok, so reading the description closely, it sounds like this is something that only happens when inserting these keyframes using the sliders in the action editor. Checking the code for these (anim_channels_defines.c), it looks like the sliders are just missing the necessary NLA remapping which is done for standard keyframing now. Should be a simple patch fix :)
Joshua Leung was assigned by Julian Eisel 2015-02-03 13:47:57 +01:00
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Assigning to you then

Assigning to you then

This issue was referenced by a01501443b

This issue was referenced by a01501443bcf2214357351b4dd221335ed8f7d56
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit a01501443b.

Closed by commit a01501443b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43541
No description provided.