Bugfix T43541: Inserting keyframes using sliders in Action Editor doesn't respect NLA time remapping